<resources>
    <string name="app_name">Depot Life</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_account">Tài khoản</string>
    <string name="text_password">Mật khẩu</string>
    <string name="text_new_password">Mật khẩu mới</string>
    <string name="text_forgot_password">Quên \nmật khẩu?</string>
    <string name="text_notification">Thông báo</string>
    <string name="text_hint_password">Password</string>
    <string name="text_success">Thành công</string>
    <string name="text_invoice">Hóa đơn</string>
    <string name="text_import">Nhập hàng</string>
    <string name="text_export">Xuất hàng</string>
    <string name="text_product">Hàng hóa</string>
    <string name="text_sum">Tổng: </string>
    <string name="text_incomplete">Phiếu tạm</string>
    <string name="text_complete">Hoàn thành</string>
    <string name="text_total_money">Thành tiền</string>
    <string name="text_hint_username_email">Username/Email</string>
    <string name="text_success_password">Bạn đã đổi mật khẩu \nthành công.</string>
    <string name="text_suppplier">Nhà cung cấp</string>
    <string name="text_statistic">Tổng quan</string>
    <string name="text_category">Loại hàng hóa</string>
    <string name="text_staff">Nhân viên</string>
    <string name="sharedpreferences">ACC</string>
    <string name="not_empty">* Không được để trống</string>


    <string name="text_hint_re_password">Repassword</string>
    <string name="text_reset">Đặt lại</string>
    <string name="text_authentication"> Xác thực</string>
    <string name="text_continue">Tiếp tục</string>
    <string name="text_try_again">Thử lại</string>
    <string name="text_check_username">Email/SĐT không trùng khớp \nvới thông tin tài khoản\nVui lòng thử lại.</string>
    <string name="text_sort">Sắp xếp</string>
    <string name="text_increment_price">Giá tăng dần</string>
    <string name="text_decrement_price">Giá giảm dần</string>
    <string name="text_latest">Mới nhất</string>
    <string name="text_oldest">Cũ nhất</string>
    <string name="text_filter">Lọc</string>

    <string name="text_total_money_filter">Lọc hàng hoá</string>
    <string name="text_apply">Áp dụng</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search…</string>
    <string name="title_dialog_supplier_invoice">Suppliers</string>

</resources>