<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bot_nav_statistic"
        android:icon="@drawable/statistic_bot_nav"
        android:title="@string/text_statistic" />
    <item
        android:id="@+id/bot_nav_invoice"
        android:icon="@drawable/invoice_bot_nav"
        android:title="@string/text_invoice" />
    <item
        android:id="@+id/bot_nav_scan"
        android:enabled="false"
        android:title="" />
    <item
        android:id="@+id/bot_nav_product"
        android:icon="@drawable/product_bot_nav"
        android:title="@string/text_product" />
    <item
        android:id="@+id/bot_nav_menu"
        android:icon="@drawable/menu_bot_nav"
        android:title="Thêm" />
</menu>