<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/custom_rd_sort_filter"
    android:background="@drawable/bgr_bot_sheet"
    android:orientation="vertical">

    <TextView
        style="@style/custom_tv_title_bot_sheet"
        android:text="@string/text_filter" />

    <View
        style="@style/custom_line"
        android:background="@color/black" />

    <RadioGroup
        android:id="@+id/rd_gr"
        style="@style/custom_rd_sort_filter">

        <RadioButton
            android:id="@+id/rd_filter_all"
            style="@style/custom_rd_sort_filter"
            android:text="Tất cả" />

        <RadioButton
            android:id="@+id/rd_filter_import"
            style="@style/custom_rd_sort_filter"
            android:text="@string/text_import" />

        <RadioButton
            android:id="@+id/rd_filter_export"
            style="@style/custom_rd_sort_filter"
            android:text="@string/text_export" />

        <RadioButton
            android:id="@+id/rd_filter_not_done"
            style="@style/custom_rd_sort_filter"
            android:text="Chưa hoàn thành" />

        <RadioButton
            android:id="@+id/rd_filter_done"
            style="@style/custom_rd_sort_filter"
            android:text="Hoàn thành" />
    </RadioGroup>
</LinearLayout>