<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgotPassword.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/img_back"
        style="@style/custom_img_back" />

    <TextView
        android:id="@+id/textView2"
        style="@style/custom_tv_forgot_pass"
        android:text="@string/text_forgot_password" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/custom_llLogin"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="60dp">

        <TextView
            style="@style/custom_tv_title_edt"
            android:text="@string/text_account" />

        <EditText
            android:id="@+id/edt_username"
            style="@style/custom_bgr_edt"
            android:hint="@string/text_hint_username_email"
            android:inputType="text|textEmailAddress" />

        <TextView
            android:id="@+id/tv_war_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:visibility="gone" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reset"
        style="@style/custom_btn"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp" />
</RelativeLayout>