<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgotPassword.ResetPasswordActivity">

    <ImageView
        android:id="@+id/img_back"
        style="@style/custom_img_back" />

    <TextView
        android:id="@+id/textView2"
        style="@style/custom_tv_forgot_pass"
        android:text="Đặt lại mật khẩu" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/custom_llLogin"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="60dp">

        <TextView
            style="@style/custom_tv_title_edt"
            android:text="@string/text_new_password" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_pass"
                style="@style/custom_bgr_edt"
                android:layout_marginTop="10dp"
                android:hint="@string/text_hint_password"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/img_hidden_pass"
                style="@style/custom_toggle_hidden_pass" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/custom_llLogin"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="30dp">

        <TextView
            style="@style/custom_tv_title_edt"
            android:text="Nhập lại mật khẩu" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_repass"
                style="@style/custom_bgr_edt"
                android:layout_marginTop="10dp"
                android:hint="@string/text_hint_re_password"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/img_hidden_repass"
                style="@style/custom_toggle_hidden_pass" />
        </RelativeLayout>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResetForgotPwd"
        style="@style/custom_btn"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/text_reset" />


</RelativeLayout>