<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgr_dialog_notification"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/custom_tv_title_dialog_success"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/text_notification" />

<!--        <ImageButton-->
<!--            android:id="@+id/img_close"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:backgroundTint="@color/white"-->
<!--            android:contentDescription="null"-->
<!--            android:src="@drawable/close" />-->


        <TextView
            android:id="@+id/textView2"
            style="@style/custom_tv_content_dialog_noti"
            android:layout_below="@+id/textView"
            android:text="@string/text_check_username" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRetry"
            style="@style/custom_btn"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/text_try_again" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>